--- a/InfoQuiver/src/templates/om/Control.vm
+++ b/InfoQuiver/src/templates/om/Control.vm
@@ -123,5 +123,11 @@ dbprops.idMethod = $dbprops.get("idMethod")
       $generator.parse("cache/CacheBackedPeerInitializer.vm",$path);
 	## END CACHEBACKED PEER INITIALIZER GENERATION
 
+	## BEGIN IBASEWEBSERVICE GENERATION
+    #set ( $fname = "IBaseWebService.java" )
+    #set ( $path = "net/sf/iquiver/remote/soap/$fname" )
+      #$generator.parse("remote/IBaseWebService.vm",$path);
+	## END IBASEWEBSERVICE GENERATION
+	
   #end
 #end
