*** empty log message ***

--- a/InfoQuiver/src/templates/om/Control.vm
+++ b/InfoQuiver/src/templates/om/Control.vm
@@ -124,9 +124,9 @@ dbprops.idMethod = $dbprops.get("idMethod")
 	## END CACHEBACKED PEER INITIALIZER GENERATION
 
 	## BEGIN IBASEWEBSERVICE GENERATION
-    #set ( $fname = "IBaseWebService.java" )
-    #set ( $path = "net/sf/iquiver/remote/soap/$fname" )
-      #$generator.parse("remote/IBaseWebService.vm",$path);
+    ##set ( $fname = "IBaseWebService.java" )
+    ##set ( $path = "net/sf/iquiver/remote/soap/$fname" )
+      ##$generator.parse("remote/IBaseWebService.vm",$path);
 	## END IBASEWEBSERVICE GENERATION
 	
   #end
