--- a/InfoQuiver/src/reports/SearchResultReport.jrxml
+++ b/InfoQuiver/src/reports/SearchResultReport.jrxml
@@ -22,18 +22,18 @@
 	</field>
 	<variable name="Id" class="java.lang.Integer" resetType="Group" resetGroup="ResultGroup" calculation="System">
 		<variableExpression><![CDATA[new Integer($V{Id}.intValue() + 1)]]></variableExpression>
-		<initialValueExpression><![CDATA[new Integer(1)]]></initialValueExpression>
+		<initialValueExpression><![CDATA[new Integer(0)]]></initialValueExpression>
 	</variable>
 	<group name="ResultGroup" minHeightToStartNewPage="60">
 		<groupExpression><![CDATA[$F{Criteria}]]></groupExpression>
 		<groupHeader>
-		<band height="47">
+		<band height="35">
 			<rectangle>
-				<reportElement key="rectangle" x="0" y="0" width="515" height="40" forecolor="#333333" backcolor="#95c0e1"/>
+				<reportElement key="rectangle" x="0" y="0" width="515" height="32" forecolor="#333333" backcolor="#a9d2eb"/>
 				<graphicElement pen="Thin"/>
 			</rectangle>
 			<textField pattern="" isBlankWhenNull="true">
-				<reportElement key="textField" positionType="Float" mode="Opaque" x="8" y="0" width="507" height="40" backcolor="#95c0e1"/>
+				<reportElement key="textField" positionType="Float" mode="Opaque" x="8" y="1" width="505" height="30" backcolor="#a9d2eb"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Arial" size="12" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfFontName="Helvetica" pdfEncoding="Cp1252" isPdfEmbedded="false"/>
 				</textElement>
@@ -63,16 +63,15 @@
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{ReportTitle}]]></textFieldExpression>
 			</textField>
-			<image>
+			<image evaluationTime="Report">
 				<reportElement key="image" positionType="Float" mode="Opaque" x="458" y="5" width="55" height="56"/>
 				<graphicElement/>
 				<imageExpression class="java.lang.String"><![CDATA["images/iquiver.gif"]]></imageExpression>
-				<hyperlinkPageExpression><![CDATA[]]></hyperlinkPageExpression>
 			</image>
 		</band>
 	</title>
 	<pageHeader>
-		<band height="11">
+		<band height="21">
 		</band>
 	</pageHeader>
 	<columnHeader>
@@ -88,12 +87,12 @@
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{FileName}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" pattern="">
-				<reportElement key="textField" positionType="Float" mode="Opaque" x="465" y="0" width="35" height="15"/>
+			<textField isStretchWithOverflow="true" pattern="#.##0.00 %">
+				<reportElement key="textField" positionType="Float" mode="Opaque" x="465" y="0" width="46" height="15"/>
 				<textElement textAlignment="Right">
 					<font fontName="Arial" size="12" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfFontName="Helvetica" pdfEncoding="Cp1252" isPdfEmbedded="false"/>
 				</textElement>
-				<textFieldExpression class="java.lang.Float"><![CDATA[$F{Score}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.Float"><![CDATA[new Float($F{Score}.floatValue() * 100)]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
 				<reportElement key="textField" positionType="Float" mode="Opaque" x="25" y="0" width="432" height="15"/>
@@ -110,23 +109,16 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[String.valueOf($V{Id}) + ". "]]></textFieldExpression>
 			</textField>
 			<textField pattern="">
-				<reportElement key="textField" positionType="Float" mode="Opaque" x="25" y="15" width="488" height="50"/>
+				<reportElement key="textField" positionType="Float" mode="Opaque" x="25" y="16" width="488" height="53"/>
 				<textElement>
 					<font fontName="Arial" size="12" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfFontName="Helvetica" pdfEncoding="Cp1252" isPdfEmbedded="false"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{ShortDescription}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement key="line" positionType="Float" x="0" y="90" width="515" height="1" forecolor="#808080"/>
+				<reportElement key="line" positionType="Float" x="0" y="90" width="515" height="1" forecolor="#a9d2eb" backcolor="#a9d2eb"/>
 				<graphicElement pen="Thin"/>
 			</line>
-			<staticText>
-				<reportElement key="staticText" positionType="Float" mode="Opaque" x="500" y="0" width="15" height="15"/>
-				<textElement>
-					<font fontName="Arial" size="12" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfFontName="Helvetica" pdfEncoding="Cp1252" isPdfEmbedded="false"/>
-				</textElement>
-				<text><![CDATA[%]]></text>
-			</staticText>
 		</band>
 	</detail>
 	<columnFooter>
