--- a/infoquiver-web/login.vm
+++ b/infoquiver-web/login.vm
@@ -6,8 +6,7 @@
 	#parse("index.vm")
 #else	
     <form name="login_form" method="post" action="$link.setRelative("login.vm")">
-    <div align="center" class="maintable">
-    <table border="0" width="300">
+    <table border="0" width="300" class="maintable">
     <tr>
     	<td>Login</td>
     	<td><input type="text" name="login" value="$params.getString("login", "")"></td>
@@ -20,6 +19,5 @@
     	<td colspan="2" align="right"><input type="submit" value="Go"></td>
     </tr>
     </table>
-    </div>
     </form>
 #end
